Clean backend isolated push for Render deployment

--- a/.env
+++ b/.env
@@ -1,13 +1,4 @@
-MONGO_URL="mongodb://localhost:27017"
-DB_NAME="ai_money_agent_sa"
-CORS_ORIGINS="*"
-EMERGENT_LLM_KEY="sk-emergent-a4b10575eF82937AcE"
-JWT_SECRET="sa-ai-money-agent-secret-key-2025"
-PAYFAST_MERCHANT_ID="placeholder"
-PAYFAST_MERCHANT_KEY="placeholder"
-PAYFAST_PASSPHRASE="placeholder"
-STRIPE_SECRET_KEY="placeholder"
-SENDGRID_API_KEY="placeholder"
-KYC_PROVIDER_KEY="placeholder"
-SENTRY_DSN="placeholder"
-OPENROUTER_API_KEY="placeholder"
+MONGO_URL=mongodb+srv://johanh1537_db_user:hxKXPIvsWlh3VZ1w@cluster0.tavzohv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_NAME=ai_money_agent
+JWT_SECRET=supersecret123
+CORS_ORIGINS=https://ai-money-agent-frontend.onrender.com, http://localhost:3000
